# pacman-emulator-cpp

./: .gitignore  AGENTS.md  README.md
doc/: intro.md
pacman_cpp/: CMakeLists.txt
pacman_cpp/src/: game.cpp  game.hpp  main.cpp  memory.cpp  memory.hpp  renderer.cpp  renderer.hpp
